# yendoria

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE_COMMERCIAL  LICENSE_ENGINE  PHASE1_IMPLEMENTATION.md  README.md  codecov.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  technical_issue.md
.github/workflows/: ci.yml  docs.yml  release.yml  security.yml
config/ai/: archetypes.json  behavior_trees.json  factions.json  quest_templates.json
docs/: AI_DESIGN.md  AI_IMPLEMENTATION_PLAN.md  AI_SYSTEM_DESIGN_SUMMARY.md  CONVENTIONAL_COMMITS.md  GITHUB_PAGES_SETUP.md  PYPI_PUBLICATION.md  ai_api.rst  ai_examples.rst  ai_overview.rst  api.rst  conf.py  index.rst  modding.rst  modding_api.rst  modding_examples.rst  modding_quickstart.rst  modding_roadmap.rst  modding_tutorial.rst
docs/_static/: .gitkeep
docs/notes/: AI_INTEGRATION_COMPLETE.md  AI_SYSTEM_ARCHITECTURE.md  DEVELOPMENT_WORKFLOW_ANALYSIS.md  DISTRIBUTION.md  MODDING_ARCHITECTURE.md  MODDING_DOCUMENTATION_SUMMARY.md  RELEASE_AUTOMATION.md  RELEASE_AUTOMATION_SUMMARY.md  SHARED_COMPONENTS_ANALYSIS.md  WORLDGEN.md  WORLDGEN_IMPLEMENTATION_ROADMAP.md
examples/mods/: README.md  advanced_stats_mod.py  event_system_demo.py  simple_gameplay_mods.py
scripts/: migrate_to_dual_license.sh  release-analytics.sh  test-install.sh  test-release.sh
src/yendoria/: __init__.py  __main__.py  engine.py  main.py
src/yendoria/components/: ai_components.py  ai_events.py  component.py  component_manager.py
src/yendoria/entities/: __init__.py  entity.py  monster.py  player.py
src/yendoria/game_map/: __init__.py  game_map.py  room.py  tile.py
src/yendoria/input_handlers/: event_handler.py
src/yendoria/modding/: __init__.py
src/yendoria/systems/: ai_behavior_advanced.py  ai_behavior_basic.py  ai_behavior_interface.py  ai_engine_integration.py  ai_error_handling.py  ai_integration_example.py  ai_manager.py  ai_singleton_registry.py  config_manager.py  rendering.py
src/yendoria/utils/: constants.py
tests/: test_ai_advanced_extended.py  test_ai_behavior_advanced.py  test_ai_behavior_basic.py  test_ai_integration.py  test_ai_integration_example.py  test_components_extended.py  test_config_manager.py  test_engine.py  test_engine_additional.py  test_engine_extended.py  test_entities.py  test_game_ai_integration.py  test_game_map.py  test_input_handlers.py  test_main_entry.py  test_modding_extended.py  test_player_extended.py
